<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/disclaimer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/disclaimer_title"
                android:textSize="25sp"
                android:gravity="center"
                tools:gravity="center"
                app:layout_constraintTop_toTopOf="parent"/>
        <ScrollView
                android:id="@+id/disclaimer_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="620dp"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toBottomOf="@+id/disclaimer_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp">
            <LinearLayout
                    android:id="@+id/disclaimer_vertical_view" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical" >
                <TextView
                        android:id="@+id/disclaimer_text"
                        android:text="@string/disclaimer_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="15sp"/>

                <Button
                        android:id="@+id/confirm_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/agree_button"
                        android:layout_weight="1" android:visibility="invisible"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>