<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".login.registration.CombinedRegister">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[13]"
                android:id="@+id/logo_image"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/username" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:srcCompat="@android:drawable/star_big_on"/>
        <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="104dp" app:layout_constraintTop_toBottomOf="@+id/logo_image"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginTop="4dp"
                android:visibility="visible"/>


        <!--<Button
                android:text="Sign-Up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_button" android:layout_marginTop="68dp"
                app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"/>-->

        <!-- <Button
                android:text="Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnNext"
                android:visibility="gone" android:layout_marginTop="68dp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"/> -->


        <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/first_name_autofill_hint"
                android:hint="@string/first_name_hint"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@+id/last_name_edit_text"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:visibility="visible"/>

        <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/last_name_autofill_hint"
                android:hint="@string/last_name_hint"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/first_name_edit_text"
                app:layout_constraintTop_toBottomOf="@id/password" android:layout_marginTop="25dp"
                android:visibility="visible"/>

        <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/language_array"
                app:layout_constraintEnd_toStartOf="@+id/country_spinner"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" android:layout_marginTop="15dp"/>

        <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/country_array"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/language_spinner"
                app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" android:layout_marginTop="15dp"/>

        <Spinner
                android:id="@+id/sex_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/sex_array"
                app:layout_constraintEnd_toStartOf="@+id/dob_text"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_spinner" android:layout_marginTop="15dp"/>

        <EditText
                android:id="@+id/dob_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/dob_text"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sex_spinner"
                app:layout_constraintTop_toBottomOf="@id/country_spinner"/>

        <CheckBox
                android:id="@+id/confirmation_checkbox"
                android:text="@string/confirm_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/dob_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/dob_text"
                />

        <Button
        android:text="Sign-Up"
        android:id="@+id/register_button"
                android:enabled="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/confirmCode"/>

        <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_checkbox"
        app:layout_constraintVertical_bias="0.3"/>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TxtProgress"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading"
                android:textAlignment="center">
        </TextView>

        <EditText
                android:id="@+id/confirmCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirmation_code"
                android:inputType="numberPassword"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TxtProgress"
                tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
