<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".login.registration.CombinedRegister">

        <ImageView
                android:id="@+id/face_image"
                android:layout_width="168dp"
                android:layout_height="192dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:rotation="90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_camera"
                tools:srcCompat="@tools:sample/avatars" />


        <!--<Button
                android:text="Sign-Up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_button" android:layout_marginTop="68dp"
                app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"/>-->

        <!-- <Button
                android:text="Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnNext"
                android:visibility="gone" android:layout_marginTop="68dp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"/> -->


        <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/first_name_autofill_hint"
                android:hint="@string/first_name_hint"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/language_spinner"
                app:layout_constraintEnd_toStartOf="@+id/last_name_edit_text"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

        <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/last_name_autofill_hint"
                android:hint="@string/last_name_hint"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/first_name_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/email_text" />

        <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/language_array"
                app:layout_constraintEnd_toStartOf="@+id/country_spinner"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" />

        <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/country_array"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/language_spinner"
                app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" />

        <Spinner
                android:id="@+id/sex_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/sex_array"
                app:layout_constraintEnd_toStartOf="@+id/dob_text"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_spinner" />

        <EditText
                android:id="@+id/dob_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/dob_text"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sex_spinner"
                app:layout_constraintTop_toBottomOf="@id/country_spinner" />

        <CheckBox
                android:id="@+id/confirmation_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/dob_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/confirm_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

        <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_checkbox"
        app:layout_constraintVertical_bias="0.3"/>

        <EditText
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:clickable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/face_image"
                tools:text="email" />

        <Button
                android:id="@+id/finish_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/finish_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmation_checkbox" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="600dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
